Issue number: 5711 Submitted by: hvijay Reviewed by:  bigfatrat The counts for total sessions created so far and session notification queue size do not change. The fix causes 'total sessions created' to get updated but its difficult to see the 'session notification queue' size because its an event based metric.
git-svn-id: https://svn.java.net/svn/opensso~svn/trunk@8122 b2119f5d-607e-cfcf-c5d3-9fa3ed8061d4