@@ -22,7 +22,7 @@
  * your own identifying information:
  * "Portions Copyrighted [year] [name of copyright owner]"
  *
- * $Id: SsoServerSessSvcImpl.java,v 1.2 2009-10-21 00:03:14 bigfatrat Exp $
+ * $Id: SsoServerSessSvcImpl.java,v 1.3 2009-11-02 20:10:45 hvijay Exp $
  *
  */
 
@@ -31,6 +31,8 @@ package com.sun.identity.monitoring;
 import com.sun.identity.shared.debug.Debug;
 import com.sun.management.snmp.agent.SnmpMib;
 import javax.management.MBeanServer;
+import com.iplanet.dpro.session.service.SessionService;
+import com.sun.management.snmp.SnmpStatusException;
 
 /**
  * This class extends the "SsoServerSessSvc" class.
@@ -121,8 +123,11 @@ public class SsoServerSessSvcImpl extends SsoServerSessSvc {
         SessionCreatedCount = Long.valueOf(li);
     }
 
-    public void setSessNotifCount (long count) {
-        SessionNotifCount = Long.valueOf(count);
+    /**
+     * Getter for the "SessionNotifCount" variable.
+     */
+    public Long getSessionNotifCount() throws SnmpStatusException {
+        return new Long(SessionService.getNotificationQueueSize());
     }
 
 }
